--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Amos Goh's Personal Portfolio website"
+      content="This website is made by Amos Goh En Jie to display his personal portfolio, works and projects!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
